--- a/main.tt
+++ b/main.tt
@@ -1,5 +1,1 @@
-
-#EVENT {PROGRAM START}
-{
-    #session {retromud} {retromud.org} {3000} {retromud-tin/tin/all.tt};
-};
+#read retromud-tin/tin/all.tt
