--- a/tin/settings.tt
+++ b/tin/settings.tt
@@ -2,8 +2,11 @@
 
 #EVENT {SESSION CONNECTED} {
     #screen rescale 2000 3000;
-    #config speedwalk on;
-    
+    #config speedwalk off;
+    #VARIABLE {ne}{northeast};
+    #VARIABLE {se} {southeast};
+    #VARIABLE {nw}{northwest};
+    #VARIABLE {sw} {southwest};
 };
 
 #EVENT {SCREEN RESIZE} {
