--- a/tin/prompt.tt
+++ b/tin/prompt.tt
@@ -35,9 +35,12 @@
         #format {sp_max}	{%+4s} {<128>$my[sp][max]<088>};
         #format {ep}		{%+4s} {@colscale{$my[ep][current];$my[ep][max]}};
         #format {ep_max}	{%+4s} {<128>$my[ep][max]<088>};
-        #SHOWME {H:$my[hp][graph] S:$my[sp][graph] E:$my[ep][graph]}{3}{3};
-        #SHOWME {HP:$hp/$hp_max SP:$sp/$sp_max EP:$ep/$ep_max}{4}{3};
-        #SHOWME {Target: $my[target]}{5}{3};
+        #VARIABLE {PROMPT[line1]} {H:$my[hp][graph] S:$my[sp][graph] E:$my[ep][graph]};
+        #VARIABLE {PROMPT[line2]} {HP:$hp/$hp_max SP:$sp/$sp_max EP:$ep/$ep_max};
+        #VARIABLE {PROMPT[line3]} {Target: $my[target]};
+        #SHOWME {$PROMPT[line1]}{3}{$PROMPT[first_column]};
+        #SHOWME {$PROMPT[line2]}{4}{$PROMPT[first_column]};
+        #SHOWME {$PROMPT[line3]}{5}{$PROMPT[first_column]};
         #UNVARIABLE {hp};
         #UNVARIABLE {hp_max};
         #UNVARIABLE {sp};
@@ -53,7 +56,7 @@
     };
 };
 
-#action {Hp: %d/%d Sp: %d/%d Ep: %d/%d}
+#action {^Hp: %d/%d  Sp: %d/%d  Ep: %d/%d$}
 {
     #local _mana {};
     #local _health {};
@@ -80,9 +83,12 @@
         #format {sp_max}	{%+4s} {<128>$my[sp][max]<088>};
         #format {ep}		{%+4s} {@colscale{$my[ep][current];$my[ep][max]}};
         #format {ep_max}	{%+4s} {<128>$my[ep][max]<088>};
-        #SHOWME {H:$my[hp][graph] S:$my[sp][graph] E:$my[ep][graph]}{3}{3};
-        #SHOWME {HP:$hp/$hp_max SP:$sp/$sp_max EP:$ep/$ep_max}{4}{3};
-        #SHOWME {Target: $my[target]}{5}{3};
+        #VARIABLE {PROMPT[line1]} {H:$my[hp][graph] S:$my[sp][graph] E:$my[ep][graph]};
+        #VARIABLE {PROMPT[line2]} {HP:$hp/$hp_max SP:$sp/$sp_max EP:$ep/$ep_max};
+        #VARIABLE {PROMPT[line3]} {Target: $my[target]};
+        #SHOWME {$PROMPT[line1]}{3}{$PROMPT[first_column]};
+        #SHOWME {$PROMPT[line2]}{4}{$PROMPT[first_column]};
+        #SHOWME {$PROMPT[line3]}{5}{$PROMPT[first_column]};
         #UNVARIABLE {hp};
         #UNVARIABLE {hp_max};
         #UNVARIABLE {sp};
