--- a/tin/alias.tt
+++ b/tin/alias.tt
@@ -4,6 +4,9 @@
 #ALIAS {.tar} {
     #VARIABLE {my[target]} {%1};
 }{5};
+#ALIAS {.km} {
+    kill $my[target];
+} {5};
 
 #ACTION {*** NEW ROUND ***} {
     scan
