--- a/tin/settings.tt
+++ b/tin/settings.tt
@@ -2,7 +2,9 @@
 
 #EVENT {SESSION CONNECTED} {
     #screen rescale 2000 3000;
-    #config speedwalk off;
+    #VARIABLE {my[target]} {monster};
+    wear all GEAR;
+    keep all GEAR;
 };
 
 #EVENT {SCREEN RESIZE} {
