--- a/tin/prompt.tt
+++ b/tin/prompt.tt
@@ -6,7 +6,7 @@
 #highlight {{E:|EP:}}{<afa>};
 
 
-#action {^Hp: %d/%d Sp: %d/%d Ep: %d/%d Gold: %d Exp: %d >$}
+#action {^Hp: %d/%d Sp: %d/%d Ep: %d/%d Gold: %d Exp: %d Align: %9 Wielded: %10 >$}
 {
     #local _mana {};
     #local _health {};
@@ -20,6 +20,8 @@
     #var {my[ep][max]} {%6};
     #var {my[gold][carried]} {%7};
     #var {my[xp]} {%8};
+    #var {my[align]} {%9};
+    #var {my[wield]} {%10};
 
     #var {my[hp][graph]} {@graph{%1;%2}};
     #var {my[sp][graph]} {@graph{%3;%4}};
@@ -35,9 +37,12 @@
         #format {sp_max}	{%+4s} {<128>$my[sp][max]<088>};
         #format {ep}		{%+4s} {@colscale{$my[ep][current];$my[ep][max]}};
         #format {ep_max}	{%+4s} {<128>$my[ep][max]<088>};
+        #format {alignment} {%s} {@alignmentscale{$my[align]}};
+        #VARIABLE {PROMPT[line0]} {Alignment: $alignment};
         #VARIABLE {PROMPT[line1]} {H:$my[hp][graph] S:$my[sp][graph] E:$my[ep][graph]};
         #VARIABLE {PROMPT[line2]} {HP:$hp/$hp_max SP:$sp/$sp_max EP:$ep/$ep_max};
         #VARIABLE {PROMPT[line3]} {Target: $my[target] Skill: $skilluse Spell: $spelluse};
+        #SHOWME {$PROMPT[line0]}{2}{$PROMPT[first_column]};
         #SHOWME {$PROMPT[line1]}{3}{$PROMPT[first_column]};
         #SHOWME {$PROMPT[line2]}{4}{$PROMPT[first_column]};
         #SHOWME {$PROMPT[line3]}{5}{$PROMPT[first_column]};
@@ -83,9 +88,12 @@
         #format {sp_max}	{%+4s} {<128>$my[sp][max]<088>};
         #format {ep}		{%+4s} {@colscale{$my[ep][current];$my[ep][max]}};
         #format {ep_max}	{%+4s} {<128>$my[ep][max]<088>};
+        #format {alignment} {%s} {@alignmentscale{$my[align]}};
+        #VARIABLE {PROMPT[line0]} {Alignment: $alignment};
         #VARIABLE {PROMPT[line1]} {H:$my[hp][graph] S:$my[sp][graph] E:$my[ep][graph]};
         #VARIABLE {PROMPT[line2]} {HP:$hp/$hp_max SP:$sp/$sp_max EP:$ep/$ep_max};
         #VARIABLE {PROMPT[line3]} {Target: $my[target] Skill: $skilluse Spell: $spelluse};
+        #SHOWME {$PROMPT[line0]}{2}{$PROMPT[first_column]};
         #SHOWME {$PROMPT[line1]}{3}{$PROMPT[first_column]};
         #SHOWME {$PROMPT[line2]}{4}{$PROMPT[first_column]};
         #SHOWME {$PROMPT[line3]}{5}{$PROMPT[first_column]};
@@ -177,5 +185,72 @@
         }
 }
 
+#FUNCTION {alignmentscale} {
+    #SWITCH {"%1"} {
+		#CASE {"Diabolical"} {#return <faa>%1<088>};
+		#CASE {"Fiendish"} {#return <faa>%1<088>};
+		#CASE {"Devilish"} {#return <faa>%1<088>};
+		#CASE {"Hellish"} {#return <faa>%1<088>};
+		#CASE {"Nefarious"} {#return <faa>%1<088>};
+		#CASE {"Villainous"} {#return <faa>%1<088>};
+		#CASE {"Malevolent"} {#return <faa>%1<088>};
+		#CASE {"Criminal"} {#return <faa>%1<088>};
+		#CASE {"Sinful"} {#return <faa>%1<088>};
+		#CASE {"Malicious"} {#return <faa>%1<088>};
+		#CASE {"Sinister"} {#return <faa>%1<088>};
+		#CASE {"Cruel"} {#return <faa>%1<088>};
+		#CASE {"Wicked"} {#return <faa>%1<088>};
+		#CASE {"Evil"} {#return <faa>%1<088>};
+		#CASE {"Heartless"} {#return <faa>%1<088>};
+		#CASE {"Spiteful"} {#return <faa>%1<088>};
+		#CASE {"Nasty"} {#return <faa>%1<088>};
+		#CASE {"Rude"} {#return <faa>%1<088>};
+		#CASE {"Mean"} {#return <faa>%1<088>};
+		#CASE {"Insensitive"} {#return <fdb>%1<088>};
+		#CASE {"Callous"} {#return <fdb>%1<088>};
+		#CASE {"Unfeeling"} {#return <fdb>%1<088>};
+		#CASE {"Unpleasant"} {#return <fdb>%1<088>};
+		#CASE {"Unkind"} {#return <fdb>%1<088>};
+		#CASE {"Inconsiderate"} {#return <fdb>%1<088>};
+		#CASE {"Unfair"} {#return <afb>%1<088>};
+		#CASE {"Prejudiced"} {#return <afb>%1<088>};
+		#CASE {"Intolerant"} {#return <afb>%1<088>};
+		#CASE {"Indifferent"} {#return <afb>%1<088>};
+		#CASE {"Apathetic"} {#return <afb>%1<088>};
+		#CASE {"Receptive"} {#return <afb>%1<088>};
+		#CASE {"Heedful"} {#return <afb>%1<088>};
+		#CASE {"Neutral"} {#return <afb>%1<088>};
+		#CASE {"Tolerant"} {#return <afb>%1<088>};
+		#CASE {"Impartial"} {#return <afb>%1<088>};
+		#CASE {"Fair"} {#return <afb>%1<088>};
+		#CASE {"Considerate"} {#return <efb>%1<088>};
+		#CASE {"Kind"} {#return <efb>%1<088>};
+		#CASE {"Pleasant"} {#return <efb>%1<088>};
+		#CASE {"Amiable"} {#return <efb>%1<088>};
+		#CASE {"Cordial"} {#return <efb>%1<088>};
+		#CASE {"Thoughtful"} {#return <ffb>%1<088>};
+		#CASE {"Nice"} {#return <ffb>%1<088>};
+		#CASE {"Agreeable"} {#return <ffb>%1<088>};
+		#CASE {"Affable"} {#return <ffb>%1<088>};
+		#CASE {"Genial"} {#return <ffb>%1<088>};
+		#CASE {"Decent"} {#return <ffb>%1<088>};
+		#CASE {"Good"} {#return <ffb>%1<088>};
+		#CASE {"Righteous"} {#return <ffb>%1<088>};
+		#CASE {"Compassionate"} {#return <ffb>%1<088>};
+		#CASE {"Benign"} {#return <ffb>%1<088>};
+		#CASE {"Charitable"} {#return <ffb>%1<088>};
+		#CASE {"Virtuous"} {#return <ffb>%1<088>};
+		#CASE {"Just"} {#return <ffb>%1<088>};
+		#CASE {"Benevolent"} {#return <ffb>%1<088>};
+		#CASE {"Heroic"} {#return <ffb>%1<088>};
+		#CASE {"Beneficent"} {#return <ffb>%1<088>};
+		#CASE {"Moral"} {#return <ffb>%1<088>};
+		#CASE {"Heavenly"} {#return <ffb>%1<088>};
+		#CASE {"Saintly"} {#return <ffb>%1<088>};
+		#CASE {"Angelic"} {#return <ffb>%1<088>};
+     #DEFAULT {#return %1}
+    };
+    operation
+};
 
 #class prompt close;
