--- a/tin/prompt.tt
+++ b/tin/prompt.tt
@@ -37,7 +37,7 @@
         #format {sp_max}	{%+4s} {<128>$my[sp][max]<088>};
         #format {ep}		{%+4s} {@colscale{$my[ep][current];$my[ep][max]}};
         #format {ep_max}	{%+4s} {<128>$my[ep][max]<088>};
-        #format {alignment} {%s} {@alignmentscale{$my[align]}};
+        #format {alignment} {%+4s} {@alignmentscale{$my[align]}};
         #format {wielding} {%s} {@wieldstatus{$my[wield]}};
         #VARIABLE {PROMPT[line0_1]} {Alignment: $alignment};
         #VARIABLE {PROMPT[line0_2]} {Wielded: $wielding};
@@ -91,7 +91,7 @@
         #format {sp_max}	{%+4s} {<128>$my[sp][max]<088>};
         #format {ep}		{%+4s} {@colscale{$my[ep][current];$my[ep][max]}};
         #format {ep_max}	{%+4s} {<128>$my[ep][max]<088>};
-        #format {alignment} {%s} {@alignmentscale{$my[align]}};
+        #format {alignment} {%+4s} {@alignmentscale{$my[align]}};
         #format {wielding} {%s} {@wieldstatus{$my[wield]}};
         #SHOWME {$PROMPT[line0_1]}{2}{$PROMPT[first_column]};
         #SHOWME {$PROMPT[line0_2]}{2}{$PROMPT[second_column]};
@@ -193,67 +193,67 @@
 
 #FUNCTION {alignmentscale} {
     #SWITCH {"%1"} {
-		#CASE {"Diabolical"} {#return <faa>%1<088>};
-		#CASE {"Fiendish"} {#return <faa>%1<088>};
-		#CASE {"Devilish"} {#return <faa>%1<088>};
-		#CASE {"Hellish"} {#return <faa>%1<088>};
-		#CASE {"Nefarious"} {#return <faa>%1<088>};
-		#CASE {"Villainous"} {#return <faa>%1<088>};
-		#CASE {"Malevolent"} {#return <faa>%1<088>};
-		#CASE {"Criminal"} {#return <faa>%1<088>};
-		#CASE {"Sinful"} {#return <faa>%1<088>};
-		#CASE {"Malicious"} {#return <faa>%1<088>};
-		#CASE {"Sinister"} {#return <faa>%1<088>};
-		#CASE {"Cruel"} {#return <faa>%1<088>};
-		#CASE {"Wicked"} {#return <faa>%1<088>};
-		#CASE {"Evil"} {#return <faa>%1<088>};
-		#CASE {"Heartless"} {#return <faa>%1<088>};
-		#CASE {"Spiteful"} {#return <faa>%1<088>};
-		#CASE {"Nasty"} {#return <faa>%1<088>};
-		#CASE {"Rude"} {#return <faa>%1<088>};
-		#CASE {"Mean"} {#return <faa>%1<088>};
-		#CASE {"Insensitive"} {#return <fdb>%1<088>};
-		#CASE {"Callous"} {#return <fdb>%1<088>};
-		#CASE {"Unfeeling"} {#return <fdb>%1<088>};
-		#CASE {"Unpleasant"} {#return <fdb>%1<088>};
-		#CASE {"Unkind"} {#return <fdb>%1<088>};
+		#CASE {"Diabolical"} {#return <faa>   %1<088>};
+		#CASE {"Fiendish"} {#return <faa>     %1<088>};
+		#CASE {"Devilish"} {#return <faa>     %1<088>};
+		#CASE {"Hellish"} {#return <faa>      %1<088>};
+		#CASE {"Nefarious"} {#return <faa>    %1<088>};
+		#CASE {"Villainous"} {#return <faa>   %1<088>};
+		#CASE {"Malevolent"} {#return <faa>   %1<088>};
+		#CASE {"Criminal"} {#return <faa>     %1<088>};
+		#CASE {"Sinful"} {#return <faa>       %1<088>};
+		#CASE {"Malicious"} {#return <faa>    %1<088>};
+		#CASE {"Sinister"} {#return <faa>     %1<088>};
+		#CASE {"Cruel"} {#return <faa>        %1<088>};
+		#CASE {"Wicked"} {#return <faa>       %1<088>};
+		#CASE {"Evil"} {#return <faa>         %1<088>};
+		#CASE {"Heartless"} {#return <faa>    %1<088>};
+		#CASE {"Spiteful"} {#return <faa>     %1<088>};
+		#CASE {"Nasty"} {#return <faa>        %1<088>};
+		#CASE {"Rude"} {#return <faa>         %1<088>};
+		#CASE {"Mean"} {#return <faa>         %1<088>};
+		#CASE {"Insensitive"} {#return <fdb>  %1<088>};
+		#CASE {"Callous"} {#return <fdb>      %1<088>};
+		#CASE {"Unfeeling"} {#return <fdb>    %1<088>};
+		#CASE {"Unpleasant"} {#return <fdb>   %1<088>};
+		#CASE {"Unkind"} {#return <fdb>       %1<088>};
 		#CASE {"Inconsiderate"} {#return <fdb>%1<088>};
-		#CASE {"Unfair"} {#return <afb>%1<088>};
-		#CASE {"Prejudiced"} {#return <afb>%1<088>};
-		#CASE {"Intolerant"} {#return <afb>%1<088>};
-		#CASE {"Indifferent"} {#return <afb>%1<088>};
-		#CASE {"Apathetic"} {#return <afb>%1<088>};
-		#CASE {"Receptive"} {#return <afb>%1<088>};
-		#CASE {"Heedful"} {#return <afb>%1<088>};
-		#CASE {"Neutral"} {#return <afb>%1<088>};
-		#CASE {"Tolerant"} {#return <afb>%1<088>};
-		#CASE {"Impartial"} {#return <afb>%1<088>};
-		#CASE {"Fair"} {#return <afb>%1<088>};
-		#CASE {"Considerate"} {#return <efb>%1<088>};
-		#CASE {"Kind"} {#return <efb>%1<088>};
-		#CASE {"Pleasant"} {#return <efb>%1<088>};
-		#CASE {"Amiable"} {#return <efb>%1<088>};
-		#CASE {"Cordial"} {#return <efb>%1<088>};
-		#CASE {"Thoughtful"} {#return <ffb>%1<088>};
-		#CASE {"Nice"} {#return <ffb>%1<088>};
-		#CASE {"Agreeable"} {#return <ffb>%1<088>};
-		#CASE {"Affable"} {#return <ffb>%1<088>};
-		#CASE {"Genial"} {#return <ffb>%1<088>};
-		#CASE {"Decent"} {#return <ffb>%1<088>};
-		#CASE {"Good"} {#return <ffb>%1<088>};
-		#CASE {"Righteous"} {#return <ffb>%1<088>};
+		#CASE {"Unfair"} {#return <afb>       %1<088>};
+		#CASE {"Prejudiced"} {#return <afb>   %1<088>};
+		#CASE {"Intolerant"} {#return <afb>   %1<088>};
+		#CASE {"Indifferent"} {#return <afb>  %1<088>};
+		#CASE {"Apathetic"} {#return <afb>    %1<088>};
+		#CASE {"Receptive"} {#return <afb>    %1<088>};
+		#CASE {"Heedful"} {#return <afb>      %1<088>};
+		#CASE {"Neutral"} {#return <afb>      %1<088>};
+		#CASE {"Tolerant"} {#return <afb>     %1<088>};
+		#CASE {"Impartial"} {#return <afb>    %1<088>};
+		#CASE {"Fair"} {#return <afb>         %1<088>};
+		#CASE {"Considerate"} {#return <efb>  %1<088>};
+		#CASE {"Kind"} {#return <efb>         %1<088>};
+		#CASE {"Pleasant"} {#return <efb>     %1<088>};
+		#CASE {"Amiable"} {#return <efb>      %1<088>};
+		#CASE {"Cordial"} {#return <efb>      %1<088>};
+		#CASE {"Thoughtful"} {#return <ffb>   %1<088>};
+		#CASE {"Nice"} {#return <ffb>         %1<088>};
+		#CASE {"Agreeable"} {#return <ffb>    %1<088>};
+		#CASE {"Affable"} {#return <ffb>      %1<088>};
+		#CASE {"Genial"} {#return <ffb>       %1<088>};
+		#CASE {"Decent"} {#return <ffb>       %1<088>};
+		#CASE {"Good"} {#return <ffb>         %1<088>};
+		#CASE {"Righteous"} {#return <ffb>    %1<088>};
 		#CASE {"Compassionate"} {#return <ffb>%1<088>};
-		#CASE {"Benign"} {#return <ffb>%1<088>};
-		#CASE {"Charitable"} {#return <ffb>%1<088>};
-		#CASE {"Virtuous"} {#return <ffb>%1<088>};
-		#CASE {"Just"} {#return <ffb>%1<088>};
-		#CASE {"Benevolent"} {#return <ffb>%1<088>};
-		#CASE {"Heroic"} {#return <ffb>%1<088>};
-		#CASE {"Beneficent"} {#return <ffb>%1<088>};
-		#CASE {"Moral"} {#return <ffb>%1<088>};
-		#CASE {"Heavenly"} {#return <ffb>%1<088>};
-		#CASE {"Saintly"} {#return <ffb>%1<088>};
-		#CASE {"Angelic"} {#return <ffb>%1<088>};
+		#CASE {"Benign"} {#return <ffb>       %1<088>};
+		#CASE {"Charitable"} {#return <ffb>   %1<088>};
+		#CASE {"Virtuous"} {#return <ffb>     %1<088>};
+		#CASE {"Just"} {#return <ffb>         %1<088>};
+		#CASE {"Benevolent"} {#return <ffb>   %1<088>};
+		#CASE {"Heroic"} {#return <ffb>       %1<088>};
+		#CASE {"Beneficent"} {#return <ffb>   %1<088>};
+		#CASE {"Moral"} {#return <ffb>        %1<088>};
+		#CASE {"Heavenly"} {#return <ffb>     %1<088>};
+		#CASE {"Saintly"} {#return <ffb>      %1<088>};
+		#CASE {"Angelic"} {#return <ffb>      %1<088>};
      #DEFAULT {#return %1}
     };
 };
